트위터 크롤링 코드 다듬기

--- a/code/twit_crawling/twitter_crawling_code.ipynb
+++ b/code/twit_crawling/twitter_crawling_code.ipynb
@@ -101,7 +101,6 @@
     "\n",
     "            lastHeight = browser.execute_script(\"return document.body.scrollHeight\")  # 스크롤 내리기 전 위치\n",
     "            while True:\n",
-    "                dailyfreq = {'Date':startdate}\n",
     "                browser.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")  # 스크롤을 맨 아래까지 내림\n",
     "                time.sleep(3)  # 로딩하는 시간때문에 sleep을 걸어줍니다.\n",
     "\n",
@@ -112,7 +111,7 @@
     "                    soup = BeautifulSoup(html,'html.parser')\n",
     "                    tweets = soup.find_all(\"p\", {\"class\": \"TweetTextSize\"})\n",
     "                    wordfreq = len(tweets)  # 페이지에 있는 트윗개수\n",
-    "                    dailyfreq['Frequency'] = wordfreq\n",
+    "                    dailyfreq = {'Date':startdate,'Frequency':wordfreq}\n",
     "                    totalfreq.append(dailyfreq)\n",
     "\n",
     "                    # 다음 작업을 위해 하루 늘려줌\n",
