2018년은9월까지만크롤링

--- a/code/twit_crawling/twitter_crawling_code.ipynb
+++ b/code/twit_crawling/twitter_crawling_code.ipynb
@@ -90,9 +90,12 @@
     "def total_twitter_perday(keyword,startyear,endyear):\n",
     "    df = pd.DataFrame(data={'Date':[],'Frequency':[]})\n",
     "    for y in range(startyear,endyear+1):\n",
-    "        startdate=dt.date(year=y,month=1,day=1)\n",
-    "        untildate=dt.date(year=y,month=1,day=2)\n",
-    "        enddate=dt.date(year=y,month=12,day=31)\n",
+    "        startdate = dt.date(year=y,month=1,day=1)\n",
+    "        untildate = dt.date(year=y,month=1,day=2)\n",
+    "        if y == 2018 :\n",
+    "            enddate = dt.date(year=y,month=9,day=12)\n",
+    "        else :\n",
+    "            enddate = dt.date(year=y,month=12,day=31)\n",
     "\n",
     "        totalfreq=[]\n",
     "        while not enddate == startdate:\n",
