--- a/code/seoul_shops/now_or_past_hots_and_not_result.ipynb
+++ b/code/seoul_shops/now_or_past_hots_and_not_result.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
     "    i += 1\n",
     "now_hot_df = now_hot_df.astype(int)\n",
     "\n",
-    "now_hot_df.to_csv('data/now_hot_place_rank_sorted_shops_abs.csv', index=False)"
+    "now_hot_df.to_csv('data/now_hot_place_rank_sorted_shops_abs.csv')"
    ]
   },
   {
