할 수 있는건 거의 다해본 crawled data

--- a/code/seoul_populations/population_visualization.ipynb
+++ b/code/seoul_populations/population_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,10 +1571,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>기간</th>\n",
+       "      <th>자치구</th>\n",
+       "      <th>동</th>\n",
+       "      <th>세대</th>\n",
+       "      <th>계_계</th>\n",
+       "      <th>계_남</th>\n",
+       "      <th>계_여</th>\n",
+       "      <th>한국인_계</th>\n",
+       "      <th>한국인_남</th>\n",
+       "      <th>한국인_여</th>\n",
+       "      <th>외국인_계</th>\n",
+       "      <th>외국인_남</th>\n",
+       "      <th>외국인_여</th>\n",
+       "      <th>세대당인구</th>\n",
+       "      <th>65세이상고령자</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>사직동</td>\n",
+       "      <td>4,400</td>\n",
+       "      <td>10,451</td>\n",
+       "      <td>4,941</td>\n",
+       "      <td>5,510</td>\n",
+       "      <td>9,943</td>\n",
+       "      <td>4,683</td>\n",
+       "      <td>5,260</td>\n",
+       "      <td>508</td>\n",
+       "      <td>258</td>\n",
+       "      <td>250</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>1,368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>삼청동</td>\n",
+       "      <td>1,684</td>\n",
+       "      <td>3,801</td>\n",
+       "      <td>1,850</td>\n",
+       "      <td>1,951</td>\n",
+       "      <td>3,671</td>\n",
+       "      <td>1,777</td>\n",
+       "      <td>1,894</td>\n",
+       "      <td>130</td>\n",
+       "      <td>73</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2.18</td>\n",
+       "      <td>589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>부암동</td>\n",
+       "      <td>4,607</td>\n",
+       "      <td>11,933</td>\n",
+       "      <td>5,904</td>\n",
+       "      <td>6,029</td>\n",
+       "      <td>11,588</td>\n",
+       "      <td>5,747</td>\n",
+       "      <td>5,841</td>\n",
+       "      <td>345</td>\n",
+       "      <td>157</td>\n",
+       "      <td>188</td>\n",
+       "      <td>2.52</td>\n",
+       "      <td>1,433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>평창동</td>\n",
+       "      <td>7,068</td>\n",
+       "      <td>19,757</td>\n",
+       "      <td>9,620</td>\n",
+       "      <td>10,137</td>\n",
+       "      <td>19,353</td>\n",
+       "      <td>9,424</td>\n",
+       "      <td>9,929</td>\n",
+       "      <td>404</td>\n",
+       "      <td>196</td>\n",
+       "      <td>208</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>2,291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>종로구</td>\n",
+       "      <td>무악동</td>\n",
+       "      <td>3,161</td>\n",
+       "      <td>8,693</td>\n",
+       "      <td>4,224</td>\n",
+       "      <td>4,469</td>\n",
+       "      <td>8,607</td>\n",
+       "      <td>4,189</td>\n",
+       "      <td>4,418</td>\n",
+       "      <td>86</td>\n",
+       "      <td>35</td>\n",
+       "      <td>51</td>\n",
+       "      <td>2.72</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     기간  자치구    동     세대     계_계    계_남     계_여   한국인_계  한국인_남  한국인_여 외국인_계  \\\n",
+       "2  2008  종로구  사직동  4,400  10,451  4,941   5,510   9,943  4,683  5,260   508   \n",
+       "3  2008  종로구  삼청동  1,684   3,801  1,850   1,951   3,671  1,777  1,894   130   \n",
+       "4  2008  종로구  부암동  4,607  11,933  5,904   6,029  11,588  5,747  5,841   345   \n",
+       "5  2008  종로구  평창동  7,068  19,757  9,620  10,137  19,353  9,424  9,929   404   \n",
+       "6  2008  종로구  무악동  3,161   8,693  4,224   4,469   8,607  4,189  4,418    86   \n",
+       "\n",
+       "  외국인_남 외국인_여 세대당인구 65세이상고령자  \n",
+       "2   258   250  2.26    1,368  \n",
+       "3    73    57  2.18      589  \n",
+       "4   157   188  2.52    1,433  \n",
+       "5   196   208  2.74    2,291  \n",
+       "6    35    51  2.72      884  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('year_population_all.csv', encoding = 'utf-8')\n",
+    "df = df.copy()\n",
+    "df = df.drop(columns = 'Unnamed: 0',axis=1)\n",
+    "df = df[df.iloc[:,2] != '소계']\n",
+    "df = df[df.iloc[:,2] != '합계']\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
