--- a/code/nemo_crawling/seoul_rental_price_crawling.ipynb
+++ b/code/nemo_crawling/seoul_rental_price_crawling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7106,6 +7106,546 @@
    ],
    "source": [
     "d.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 매매가 분류별 확인"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>법정동명</th>\n",
+       "      <th>2012_bin</th>\n",
+       "      <th>2013_bin</th>\n",
+       "      <th>2014_bin</th>\n",
+       "      <th>2015_bin</th>\n",
+       "      <th>2016_bin</th>\n",
+       "      <th>2017_bin</th>\n",
+       "      <th>2018_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1168010300</td>\n",
+       "      <td>서울특별시 강남구 개포동</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1168010800</td>\n",
+       "      <td>서울특별시 강남구 논현동</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1168010600</td>\n",
+       "      <td>서울특별시 강남구 대치동</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1168011800</td>\n",
+       "      <td>서울특별시 강남구 도곡동</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1168010500</td>\n",
+       "      <td>서울특별시 강남구 삼성동</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        법정동코드           법정동명  2012_bin  2013_bin  2014_bin  2015_bin  \\\n",
+       "0  1168010300  서울특별시 강남구 개포동       2.0       2.0       3.0       2.0   \n",
+       "1  1168010800  서울특별시 강남구 논현동       1.0       1.0       1.0       1.0   \n",
+       "2  1168010600  서울특별시 강남구 대치동       1.0       1.0       1.0       1.0   \n",
+       "3  1168011800  서울특별시 강남구 도곡동       2.0       2.0       2.0       2.0   \n",
+       "4  1168010500  서울특별시 강남구 삼성동       1.0       1.0       1.0       1.0   \n",
+       "\n",
+       "   2016_bin  2017_bin  2018_bin  \n",
+       "0       2.0       2.0       2.0  \n",
+       "1       1.0       1.0       1.0  \n",
+       "2       1.0       1.0       1.0  \n",
+       "3       1.0       1.0       2.0  \n",
+       "4       1.0       1.0       1.0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bin = pd.read_csv('data/seoul_rental_price_binning_total.csv')\n",
+    "df_bin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rlath\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>법정동명</th>\n",
+       "      <th>2012_bin</th>\n",
+       "      <th>2013_bin</th>\n",
+       "      <th>2014_bin</th>\n",
+       "      <th>2015_bin</th>\n",
+       "      <th>2016_bin</th>\n",
+       "      <th>2017_bin</th>\n",
+       "      <th>2018_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>1144011500</td>\n",
+       "      <td>서울특별시 마포구 상수동</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>1144012400</td>\n",
+       "      <td>서울특별시 마포구 연남동</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>1120011400</td>\n",
+       "      <td>서울특별시 성동구 성수동1가</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>156</th>\n",
+       "      <td>1120011500</td>\n",
+       "      <td>서울특별시 성동구 성수동2가</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>330</th>\n",
+       "      <td>1111011500</td>\n",
+       "      <td>서울특별시 종로구 사직동</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>1111013300</td>\n",
+       "      <td>서울특별시 종로구 익선동</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          법정동코드             법정동명  2012_bin  2013_bin  2014_bin  2015_bin  \\\n",
+       "100  1144011500    서울특별시 마포구 상수동       2.0       2.0       1.0       2.0   \n",
+       "108  1144012400    서울특별시 마포구 연남동       3.0       2.0       2.0       2.0   \n",
+       "155  1120011400  서울특별시 성동구 성수동1가       3.0       3.0       2.0       2.0   \n",
+       "156  1120011500  서울특별시 성동구 성수동2가       3.0       3.0       3.0       3.0   \n",
+       "330  1111011500    서울특별시 종로구 사직동       NaN       4.0       4.0       3.0   \n",
+       "353  1111013300    서울특별시 종로구 익선동       2.0       1.0       NaN       3.0   \n",
+       "\n",
+       "     2016_bin  2017_bin  2018_bin  \n",
+       "100       1.0       1.0       1.0  \n",
+       "108       2.0       2.0       1.0  \n",
+       "155       2.0       3.0       3.0  \n",
+       "156       3.0       3.0       2.0  \n",
+       "330       NaN       4.0       NaN  \n",
+       "353       2.0       2.0       2.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bin[df_bin['법정동명'].str.contains(r'(연남동|상수동|익선동|사직동|성수동)')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rlath\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>법정동명</th>\n",
+       "      <th>2012_bin</th>\n",
+       "      <th>2013_bin</th>\n",
+       "      <th>2014_bin</th>\n",
+       "      <th>2015_bin</th>\n",
+       "      <th>2016_bin</th>\n",
+       "      <th>2017_bin</th>\n",
+       "      <th>2018_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1168010700</td>\n",
+       "      <td>서울특별시 강남구 신사동</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>1138010900</td>\n",
+       "      <td>서울특별시 은평구 신사동</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>331</th>\n",
+       "      <td>1111014000</td>\n",
+       "      <td>서울특별시 종로구 삼청동</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>401</th>\n",
+       "      <td>1114012600</td>\n",
+       "      <td>서울특별시 중구 명동1가</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>402</th>\n",
+       "      <td>1114012700</td>\n",
+       "      <td>서울특별시 중구 명동2가</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          법정동코드           법정동명  2012_bin  2013_bin  2014_bin  2015_bin  \\\n",
+       "7    1168010700  서울특별시 강남구 신사동       1.0       1.0       1.0       1.0   \n",
+       "294  1138010900  서울특별시 은평구 신사동       4.0       4.0       4.0       4.0   \n",
+       "331  1111014000  서울특별시 종로구 삼청동       3.0       1.0       NaN       1.0   \n",
+       "401  1114012600  서울특별시 중구 명동1가       1.0       NaN       NaN       1.0   \n",
+       "402  1114012700  서울특별시 중구 명동2가       1.0       1.0       NaN       1.0   \n",
+       "\n",
+       "     2016_bin  2017_bin  2018_bin  \n",
+       "7         1.0       1.0       1.0  \n",
+       "294       4.0       4.0       NaN  \n",
+       "331       2.0       2.0       2.0  \n",
+       "401       1.0       NaN       NaN  \n",
+       "402       1.0       1.0       1.0  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bin[df_bin['법정동명'].str.contains(r'(신사동|삼청동|명동)')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rlath\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>법정동코드</th>\n",
+       "      <th>법정동명</th>\n",
+       "      <th>2012_bin</th>\n",
+       "      <th>2013_bin</th>\n",
+       "      <th>2014_bin</th>\n",
+       "      <th>2015_bin</th>\n",
+       "      <th>2016_bin</th>\n",
+       "      <th>2017_bin</th>\n",
+       "      <th>2018_bin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1174010100</td>\n",
+       "      <td>서울특별시 강동구 명일동</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64</th>\n",
+       "      <td>1135010500</td>\n",
+       "      <td>서울특별시 노원구 상계동</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>87</th>\n",
+       "      <td>1159010300</td>\n",
+       "      <td>서울특별시 동작구 상도1동</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>88</th>\n",
+       "      <td>1159010200</td>\n",
+       "      <td>서울특별시 동작구 상도동</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         법정동코드            법정동명  2012_bin  2013_bin  2014_bin  2015_bin  \\\n",
+       "18  1174010100   서울특별시 강동구 명일동       3.0       2.0       3.0       3.0   \n",
+       "64  1135010500   서울특별시 노원구 상계동       4.0       4.0       4.0       4.0   \n",
+       "87  1159010300  서울특별시 동작구 상도1동       2.0       2.0       2.0       2.0   \n",
+       "88  1159010200   서울특별시 동작구 상도동       4.0       3.0       3.0       3.0   \n",
+       "\n",
+       "    2016_bin  2017_bin  2018_bin  \n",
+       "18       3.0       2.0       3.0  \n",
+       "64       4.0       4.0       4.0  \n",
+       "87       2.0       2.0       2.0  \n",
+       "88       3.0       3.0       3.0  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_bin[df_bin['법정동명'].str.contains(r'(상도1?동|명일동|상계동)')]"
    ]
   },
   {
